docs/security/assets/files/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mynginx
  name: mynginx
spec:
  containers:
    - image: nginx:latest
      name: mynginx
      resources:
        limits:
          cpu: 5m
          memory: 4Mi
        requests:
          cpu: 3m
          memory: 2Mi
      livenessProbe:
        tcpSocket:
          port: 80
        initialDelaySeconds: 3
        periodSeconds: 3
      readinessProbe:
        tcpSocket:
          port: 80
        initialDelaySeconds: 3
        periodSeconds: 3
